# pretalx-plugin-broadcast-tools

./: README.md  data.json  justfile  pyproject.toml
.github/workflows/: tests.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_61e8ff50e518fe8d_placeholders_py.html  z_e6a65feed92a8315_export_voctomix_lower_thirds_py.html  z_fae599cd7c1361f8___init___py.html  z_fae599cd7c1361f8_apps_py.html  z_fae599cd7c1361f8_exporter_py.html  z_fae599cd7c1361f8_forms_py.html  z_fae599cd7c1361f8_signals_py.html  z_fae599cd7c1361f8_tasks_py.html  z_ff638a5967fce145_event_info_py.html  z_ff638a5967fce145_orga_py.html  z_ff638a5967fce145_qr_py.html  z_ff638a5967fce145_schedule_py.html  z_ff638a5967fce145_static_html_py.html  z_ff638a5967fce145_voctomix_export_py.html
pretalx_broadcast_tools/: exporter.py
pretalx_broadcast_tools/management/commands/: export_voctomix_lower_thirds.py
pretalx_broadcast_tools/views/: schedule.py
tests/: conftest.py  test_command.py  test_exporter.py  test_signals_placeholders.py  test_tasks.py  test_views.py
